--- a/index.html
+++ b/index.html
@@ -1,259 +1,264 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- displays site properly based on user's device -->
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<!-- displays site properly based on user's device -->
 
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="./images/favicon-32x32.png"
-    />
+		<link
+			rel="icon"
+			type="image/png"
+			sizes="32x32"
+			href="./images/favicon-32x32.png"
+		/>
 
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Be+Vietnam:wght@400;500;700&display=swap"
-      rel="stylesheet"
-    />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Be+Vietnam:wght@400;500;700&display=swap"
+			rel="stylesheet"
+		/>
 
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-      integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+			integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
+			crossorigin="anonymous"
+			referrerpolicy="no-referrer"
+		/>
 
-    <title>Frontend Mentor | Manage landing page</title>
-    <link rel="stylesheet" href="css/style.css" />
-  </head>
-  <body>
-    <header class="header">
-      <div class="container">
-        <nav class="navbar">
-          <img src="./images/logo.svg" alt="logo" class="logo" />
+		<title>Frontend Mentor | Manage landing page</title>
+		<link rel="stylesheet" href="css/style.css" />
+	</head>
+	<body>
+		<header class="header">
+			<div class="container">
+				<nav class="navbar">
+					<img src="./images/logo.svg" alt="logo" class="logo" />
 
-          <div class="hamburger">
-            <span class="bar"></span>
-          </div>
+					<ul class="menu">
+						<li class="menu-list-item">
+							<a href="" class="menu-item">Pricing</a>
+						</li>
+						<li class="menu-list-item">
+							<a href="" class="menu-item">Product</a>
+						</li>
+						<li class="menu-list-item">
+							<a href="" class="menu-item">About Us</a>
+						</li>
+						<li class="menu-list-item">
+							<a href="" class="menu-item">Careers</a>
+						</li>
+						<li class="menu-list-item">
+							<a href="" class="menu-item">Community</a>
+						</li>
+					</ul>
 
-          <ul class="menu">
-            <li class="menu-list-item">
-              <a href="" class="menu-item">Pricing</a>
-            </li>
-            <li class="menu-list-item">
-              <a href="" class="menu-item">Product</a>
-            </li>
-            <li class="menu-list-item">
-              <a href="" class="menu-item">About Us</a>
-            </li>
-            <li class="menu-list-item">
-              <a href="" class="menu-item">Careers</a>
-            </li>
-            <li class="menu-list-item">
-              <a href="" class="menu-item">Community</a>
-            </li>
-          </ul>
-        </nav>
+					<div class="hamburger">
+						<span class="bar"></span>
+					</div>
 
-        <!-- banner area -->
-        <div class="banner flex">
-          <div class="banner-info">
-            <img
-              src="./images/illustration-intro.svg"
-              alt=""
-              class="banner-img"
-            />
-            <h1 class="banner-title title">
-              Bring everyone together to build better products.
-            </h1>
-            <p class="banner-text">
-              Manage makes it simple for software teams to plan day-to-day tasks
-              while keeping the larger team goals in view.
-            </p>
-            <a href="/" class="btn cta btn-primary">Get Started</a>
-          </div>
-        </div>
-      </div>
-    </header>
+					<a href="/" class="btn btn-nav cta btn-primary">Get Started</a>
+				</nav>
 
-    <!-- manage services -->
-    <section class="services">
-      <div class="container flex">
-        <div class="services-info">
-          <h2 class="services-info-title title">
-            What’s different about Manage?
-          </h2>
-          <p class="services-info-text">
-            Manage provides all the functionality your team needs, without the
-            complexity. Our software is tailor-made for modern digital product
-            teams.
-          </p>
-        </div>
+				<!-- banner area -->
+				<div class="banner flex">
+					<div class="banner-info">
+						<img
+							src="./images/illustration-intro.svg"
+							alt=""
+							class="banner-img"
+						/>
+						<h1 class="banner-title title">
+							Bring everyone together to build better products.
+						</h1>
+						<p class="banner-text">
+							Manage makes it simple for software teams to plan day-to-day tasks
+							while keeping the larger team goals in view.
+						</p>
+						<a href="/" class="btn cta btn-primary">Get Started</a>
+					</div>
+				</div>
+			</div>
+		</header>
 
-        <div class="services-details">
-          <!-- card one -->
-          <div class="services-details-card">
-            <div class="services-bar">
-              <span class="services-details-number">01</span>
-              <h3 class="services-details-title title">
-                Track company-wide progress
-              </h3>
-            </div>
+		<!-- manage services -->
+		<section class="services">
+			<div class="container flex">
+				<div class="services-info">
+					<h2 class="services-info-title title">
+						What’s different about Manage?
+					</h2>
+					<p class="services-info-text">
+						Manage provides all the functionality your team needs, without the
+						complexity. Our software is tailor-made for modern digital product
+						teams.
+					</p>
+				</div>
 
-            <p class="services-details-text">
-              See how your day-to-day tasks fit into the wider vision. Go from
-              tracking progress at the milestone level all the way done to the
-              smallest of details. Never lose sight of the bigger picture again.
-            </p>
-          </div>
+				<div class="services-details">
+					<!-- card one -->
+					<div class="services-details-card">
+						<div class="services-bar">
+							<span class="services-details-number">01</span>
+							<h3 class="services-details-title title">
+								Track company-wide progress
+							</h3>
+						</div>
 
-          <!-- card two -->
-          <div class="services-details-card">
-            <div class="services-bar">
-              <span class="services-details-number">02</span>
-              <h3 class="services-details-title title">
-                Advanced built-in reports
-              </h3>
-            </div>
+						<p class="services-details-text">
+							See how your day-to-day tasks fit into the wider vision. Go from
+							tracking progress at the milestone level all the way done to the
+							smallest of details. Never lose sight of the bigger picture again.
+						</p>
+					</div>
 
-            <p class="services-details-text">
-              Set internal delivery estimates and track progress toward company
-              goals. Our customizable dashboard helps you build out the reports
-              you need to keep key stakeholders informed.
-            </p>
-          </div>
+					<!-- card two -->
+					<div class="services-details-card">
+						<div class="services-bar">
+							<span class="services-details-number">02</span>
+							<h3 class="services-details-title title">
+								Advanced built-in reports
+							</h3>
+						</div>
 
-          <!-- card three -->
-          <div class="services-details-card">
-            <div class="services-bar">
-              <span class="services-details-number">03</span>
-              <h3 class="services-details-title title">
-                Everything you need in one place
-              </h3>
-            </div>
+						<p class="services-details-text">
+							Set internal delivery estimates and track progress toward company
+							goals. Our customizable dashboard helps you build out the reports
+							you need to keep key stakeholders informed.
+						</p>
+					</div>
 
-            <p class="services-details-text">
-              Stop jumping from one service to another to communicate, store
-              files, track tasks and share documents. Manage offers an
-              all-in-one team productivity solution.
-            </p>
-          </div>
-        </div>
-      </div>
-    </section>
+					<!-- card three -->
+					<div class="services-details-card">
+						<div class="services-bar">
+							<span class="services-details-number">03</span>
+							<h3 class="services-details-title title">
+								Everything you need in one place
+							</h3>
+						</div>
 
-    <!-- testimonials section -->
-    <section class="testimonials">
-      <h2 class="testimonials-title title">What they’ve said</h2>
+						<p class="services-details-text">
+							Stop jumping from one service to another to communicate, store
+							files, track tasks and share documents. Manage offers an
+							all-in-one team productivity solution.
+						</p>
+					</div>
+				</div>
+			</div>
+		</section>
 
-      <div class="cards">
-        <!-- card 1 -->
-        <blockquote class="card">
-          <img src="./images/avatar-anisha.png" alt="Anisha" class="card-img" />
-          <h4 class="card-name">Anisha Li</h4>
-          <p class="card-text">
-            “Manage has supercharged our team’s workflow. The ability to
-            maintain visibility on larger milestones at all times keeps everyone
-            motivated.”
-          </p>
-        </blockquote>
+		<!-- testimonials section -->
+		<section class="testimonials">
+			<h2 class="testimonials-title title">What they’ve said</h2>
 
-        <!-- card 2 -->
-        <blockquote class="card">
-          <img src="./images/avatar-ali.png" alt="Ali" class="card-img" />
-          <h4 class="card-name">Ali Bravo</h4>
-          <p class="card-text">
-            “We have been able to cancel so many other subscriptions since using
-            Manage. There is no more cross-channel confusion and everyone is
-            much more focused.”
-          </p>
-        </blockquote>
+			<div class="cards">
+				<!-- card 1 -->
+				<blockquote class="card">
+					<img src="./images/avatar-anisha.png" alt="Anisha" class="card-img" />
+					<h4 class="card-name">Anisha Li</h4>
+					<p class="card-text">
+						“Manage has supercharged our team’s workflow. The ability to
+						maintain visibility on larger milestones at all times keeps everyone
+						motivated.”
+					</p>
+				</blockquote>
 
-        <!-- card 3 -->
-        <blockquote class="card">
-          <img
-            src="./images/avatar-richard.png"
-            alt="Richard"
-            class="card-img"
-          />
-          <h4 class="card-name">Richard Watts</h4>
-          <p class="card-text">
-            “Manage allows us to provide structure and process. It keeps us
-            organized and focused. I can’t stop recommending them to everyone I
-            talk to!”
-          </p>
-        </blockquote>
+				<!-- card 2 -->
+				<blockquote class="card">
+					<img src="./images/avatar-ali.png" alt="Ali" class="card-img" />
+					<h4 class="card-name">Ali Bravo</h4>
+					<p class="card-text">
+						“We have been able to cancel so many other subscriptions since using
+						Manage. There is no more cross-channel confusion and everyone is
+						much more focused.”
+					</p>
+				</blockquote>
 
-        <!-- card 4 -->
-        <blockquote class="card">
-          <img src="./images/avatar-shanai.png" alt="Shanai" class="card-img" />
-          <h4 class="card-name">Shanai Gough</h4>
-          <p class="card-text">
-            “Their software allows us to track, manage and collaborate on our
-            projects from anywhere. It keeps the whole team in-sync without
-            being intrusive.”
-          </p>
-        </blockquote>
-      </div>
+				<!-- card 3 -->
+				<blockquote class="card">
+					<img
+						src="./images/avatar-richard.png"
+						alt="Richard"
+						class="card-img"
+					/>
+					<h4 class="card-name">Richard Watts</h4>
+					<p class="card-text">
+						“Manage allows us to provide structure and process. It keeps us
+						organized and focused. I can’t stop recommending them to everyone I
+						talk to!”
+					</p>
+				</blockquote>
 
-      <a href="/" class="btn cta btn-primary">Get Started</a>
-    </section>
+				<!-- card 4 -->
+				<blockquote class="card">
+					<img src="./images/avatar-shanai.png" alt="Shanai" class="card-img" />
+					<h4 class="card-name">Shanai Gough</h4>
+					<p class="card-text">
+						“Their software allows us to track, manage and collaborate on our
+						projects from anywhere. It keeps the whole team in-sync without
+						being intrusive.”
+					</p>
+				</blockquote>
+			</div>
 
-    <!-- call to action section -->
-    <section class="cta-section">
-      <div class="container flex">
-        <h2 class="cta-title">Simplify how your team works today.</h2>
-        <a href="" class="btn cta btn-secondary">Get Started</a>
-      </div>
-    </section>
+			<a href="/" class="btn cta btn-primary">Get Started</a>
+		</section>
 
-    <!-- footer -->
-    <footer class="footer">
-      <div class="container container-footer grid">
-        <form class="footer-form">
-          <input
-            type="text"
-            class="form-input"
-            placeholder="Updates in your inbox…"
-          />
-          <button class="form-btn">Go</button>
-        </form>
+		<!-- call to action section -->
+		<section class="cta-section">
+			<div class="container flex">
+				<h2 class="cta-title">Simplify how your team works today.</h2>
+				<a href="" class="btn cta btn-secondary">Get Started</a>
+			</div>
+		</section>
 
-        <div class="footer-links-group">
-          <div class="footer-links links-left">
-            <a href="" class="footer-link">Home</a>
-            <a href="" class="footer-link">Pricing</a>
-            <a href="" class="footer-link">Products</a>
-            <a href="" class="footer-link">About Us</a>
-          </div>
+		<!-- footer -->
+		<footer class="footer">
+			<div class="container container-footer grid">
+				<form class="footer-form">
+					<input
+						type="text"
+						class="form-input"
+						placeholder="Updates in your inbox…"
+					/>
+					<button class="form-btn cta">Go</button>
+				</form>
 
-          <div class="footer-links links-right">
-            <a href="" class="footer-link">Careers</a>
-            <a href="" class="footer-link">Community</a>
-            <a href="" class="footer-link">Privacy Policy</a>
-          </div>
-        </div>
+				<div class="footer-links-group">
+					<div class="footer-links links-left">
+						<a href="" class="footer-link">Home</a>
+						<a href="" class="footer-link">Pricing</a>
+						<a href="" class="footer-link">Products</a>
+						<a href="" class="footer-link">About Us</a>
+					</div>
 
-        <div class="footer-icons"></div>
+					<div class="footer-links links-right">
+						<a href="" class="footer-link">Careers</a>
+						<a href="" class="footer-link">Community</a>
+						<a href="" class="footer-link">Privacy Policy</a>
+					</div>
+				</div>
 
-        <img
-          src="./images/logo.svg"
-          alt="logo"
-          class="footer-logo filter-white"
-        />
+				<div class="footer-icons">
+					<img src="./images/icon-facebook.svg" alt="" class="footer-icon" />
+					<img src="./images/icon-youtube.svg" alt="" class="footer-icon" />
+					<img src="./images/icon-twitter.svg" alt="" class="footer-icon" />
+					<img src="./images/icon-pinterest.svg" alt="" class="footer-icon" />
+					<img src="./images/icon-instagram.svg" alt="" class="footer-icon" />
+				</div>
 
-        <p class="footer-copyright">Copyright 2020. All Rights Reserved</p>
-      </div>
-    </footer>
+				<img src="./images/footer-logo.svg" alt="logo" class="footer-logo" />
 
-    <!--
+				<p class="footer-copyright">Copyright 2020. All Rights Reserved</p>
+			</div>
+		</footer>
+
+		<script src="script/app.js"></script>
+		<!--
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
   </div> -->
-  </body>
+	</body>
 </html>
